# pymecompress

./: .gitignore  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  meson.build  meta.yaml  mingw_native.ini  pyproject.toml  requirements.txt  setup.py  test_pymecompress.py
.github/workflows/: build_pip.yml  test.yml
pymecompress/: __init__.py  bcl.c  bcl.pyx  codecs.py  meson.build  quantize.c  quantize.dispatch.c  quantize.h  setup.py  version.py
pymecompress/bcl/: huffman.h
test/: test_quantize.py
