project(
  'pymecompress',
  'c', 'cython',
#   version: run_command(
#     # This should become `numpy/_version.py` in NumPy 2.0
#     ['numpy/_build_utils/gitversion.py'],
#     check: true).stdout().strip(),
  license: 'BSD-3',
  meson_version: '>=1.2.99',  # version in vendored-meson is 1.2.99
#   default_options: [
#     'buildtype=debugoptimized',
#     'b_ndebug=if-release',
#     'c_std=c11',
#     'cpp_std=c++17',
#     'pkgconfig.relocatable=true',
#   ],
)

subdir('pymecompress')